[package]
name = "http_files_api_from_multipart"
version = "0.1.0"
authors = ["sergiuchuckmisha <caga3@inbox.ru>"]

[dependencies]
multipart = "0.14.2"

# Optional Integrations
hyper = { version = ">=0.9, <0.11", optional = true, default-features = false }

[features]
default = ["hyper"]

[[example]]
name = "hyper_client"
required-features = ["hyper"]

[[example]]
name = "hyper_server"
required-features = ["hyper"]
